# ChangeLog for net-p2p/rtorrent
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.65 2006/11/21 14:45:50 drizzt Exp $

  21 Nov 2006; Timothy Redaelli <drizzt@gentoo.org> metadata.xml:
  Added myself as co-maintainer.

  20 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  rtorrent-0.6.4.ebuild:
  filtered -fforce-addr on x86, as reported by parafin-spobs@yandex.ru in bug
  #155679

*rtorrent-0.6.4 (27 Oct 2006)

  27 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> +rtorrent-0.6.4.ebuild:
  Version bump.

*rtorrent-0.6.3-r1 (19 Oct 2006)

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +rtorrent-0.6.3-r1.ebuild:
  Replace -O2 with -O3 on x86 systems running GCC 4.1. Closes bug #151221.

*rtorrent-0.6.3 (05 Oct 2006)

  05 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> -rtorrent-0.6.2.ebuild,
  +rtorrent-0.6.3.ebuild:
  Version bump, remove old broken release.

  24 Sep 2006; Michael Hanselmann <hansmi@gentoo.org> rtorrent-0.6.0.ebuild:
  Stable on ppc.

*rtorrent-0.6.2 (14 Sep 2006)

  14 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> +rtorrent-0.6.2.ebuild:
  Version bump.

  09 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> rtorrent-0.6.0.ebuild,
  rtorrent-0.6.1.ebuild:
  Add missing build-time dependency on bc as per bug #146845.

  09 Sep 2006; Torsten Veller <tove@gentoo.org> rtorrent-0.6.0.ebuild:
  Stable on x86 (#146845)

  09 Sep 2006; Thomas Cort <tcort@gentoo.org> rtorrent-0.6.0.ebuild:
  Stable on amd64 wrt Bug #146845.

  08 Sep 2006; Markus Rothe <corsair@gentoo.org> rtorrent-0.6.0.ebuild:
  Stable on ppc64; bug #146845

  02 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> rtorrent-0.6.1.ebuild:
  Correct dependency on libtorrent version, thanks to jieryn in bug #145837.

*rtorrent-0.6.1 (31 Aug 2006)

  31 Aug 2006; Diego Pettenò <flameeyes@gentoo.org> +rtorrent-0.6.1.ebuild:
  Version bump, thanks to Daniel Webert and CJ Kucera, bug #144926 and #145384.
