@@ -1,0 +1,3 @@
+MD5 26758f948874e1ee9732628772483b7b rtorrent-0.7.0.tar.gz 413247
+RMD160 8e0d598de52530d9483fc48096522019add75c5c rtorrent-0.7.0.tar.gz 413247
+SHA256 8e2d5f5a4476278d322a888d874152af16d8e4cf6b48f396eac4b65cd0cd9e9b rtorrent-0.7.0.tar.gz 413247
