@@ -1,6 +1,13 @@
 # ChangeLog for net-p2p/rtorrent
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.65 2006/11/21 14:45:50 drizzt Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.66 2006/12/13 11:28:37 flameeyes Exp $
+
+*rtorrent-0.7.0 (13 Dec 2006)
+
+  13 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> -rtorrent-0.5.3.ebuild,
+  -rtorrent-0.6.1.ebuild, -rtorrent-0.6.3.ebuild, -rtorrent-0.6.3-r1.ebuild,
+  +rtorrent-0.7.0.ebuild:
+  Version bump, and remove old versions.
 
   21 Nov 2006; Timothy Redaelli <drizzt@gentoo.org> metadata.xml:
   Added myself as co-maintainer.
